# pysearchlite

./: .gitignore  COPYING  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
pysearchlite/: __init__.py  block_skip_list.py  codecs.py  doc_list.py  gamma_codecs.py  gamma_codecs_cffi.py  gamma_codecs_cffi_builder.py  inverted_index.py  inverted_index_skip_list.py  main.py  memory_inverted_index.py  search_engine.py  search_engine_multiprocess.py  skip_list.py  spim_inverted_index_memory.py  spim_inverted_index_memory_binary.py  spim_inverted_index_skip_list_memory.py  spim_inveted_index.py  spim_inveted_index_memory.py  spim_inveted_index_memory_binary.py  spim_inveted_index_skip_list_memory.py  test_block_skip_list.py  test_inverted_index.py  test_inverted_index_skip_list.py  test_search_engine.py  test_skip_list.py  test_spim_inverted_index.py  test_spim_inverted_index_memory.py  test_spim_inverted_index_memory_binary.py  test_spim_inverted_index_skip_list_memory.py  tokenize.py
pysearchlite/commands/: build_index.py  do_query.py  main.py  search.py
study/: double_binary_search.py  test_double_binary_search.py
