[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pysearchlite"
description = "lightweight text search engine written in Python"
requires-python = ">=3.9"
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pysearchlite.VERSION"}

[tool.setuptools.packages.find]
include = ["pysearchlite*"]
