[metadata]
name = pysearchlite
version = attr: pysearchlite.VERSION
description = "Lightweight text search engine written in Python"
long_description = file: README.rst
home_page = https://github.com/stn/pysearchlite
keywords = search
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    Topic :: Text Processing :: Indexing

[options]
zip_safe = True
include_package_data = False
python_requires = >= 3.9
packages = find:

[options.packages.find]
include =
    pysearchlite*
exclude =
    study*
